--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .cell-1 {
-  grid-area: top;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-column-gap: 10px;
@@ -7,7 +6,6 @@
   padding: .2rem;
 }
 .cell-2 {
-  grid-area: mid;
   display: grid;
   grid-template-columns: repeat(9, 1fr);
   grid-column-gap: 10px;
@@ -15,24 +13,55 @@
   padding: 1.3rem;
 }
 .cell-3{
-  grid-area: last;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-column-gap: 10px;
   text-align: center;
   padding: .2rem 3rem;
 }
+
 .col {
+  position: relative;
   background-color: #0f7dff;
 }
 
+.bg-text{
+  animation: bg-text 1.5s linear infinite;
+}
+
+@keyframes bg-text{
+  0%   {
+	 	background-color: #0f7dff;
+  }
+  50%  {
+    background-color: yellow;
+  }
+  100% {
+    background-color: #0f7dff;
+  }
+}
+
 .blink{
-  animation: blink;
-  animation-duration: 4s;
+  animation: blink 1.5s linear infinite;
 }
 
 @keyframes blink{
-  0%   {background-color: #0f7dff;}
-  50%  {background-color: yellow; color: black}
-  100% {background-color: #0f7dff;}
+  0%   {
+	 	background-image: linear-gradient(0deg, #BBDBBE 0%, #ffff 100%);
+  }
+  50%  {
+    background-image: linear-gradient(0deg, #000000 0%, #000000 100%);
+  }
+  100% {
+    	background-image: linear-gradient(0deg, #BBDBBE 0%, #ffff 100%);
+  }
 }
+
+.col span {
+	color: transparent;
+	background-image: linear-gradient(0deg, #BBDBBE 0%, #ffff 100%);
+	-webkit-background-clip: text;
+	background-clip: text;
+	filter: drop-shadow(0 2px 2px hsla(290, 100%, 20%, 1));
+}
+
